ctypes_canapedll/CANapAPI_stripped.h

typedef unsigned long DWORD;
typedef unsigned int UINT;
enum e_RamMode
{
  e_TR_MODE_RAM=      0, 
  e_TR_MODE_ROM=      1  
};
enum TValueType
{
  VALUE  = 0, 
  CURVE  = 1, 
  MAP    = 2, 
  AXIS   = 3, 
  ASCII  = 4, 
  VAL_BLK= 5  
};
enum TObjectType 
{
  OTT_MEASURE   = 0, 
  OTT_CALIBRATE = 1, 
  OTT_UNKNOWN   = 2  
};
typedef struct DBObjectInfo
{
  enum TObjectType  DBObjecttype; 
  enum TValueType type;           
  double     min;            
  double     max;            
  double     minEx;          
  double     maxEx;          
  unsigned char       precision;      
  char       unit[MAX_PATH]; 
} DBObjectInfo;
struct  DBFileInfo  
{
  char asap2Fname[MAX_PATH]; 
  char asap2Path[MAX_PATH];  
  unsigned char type;                
};
typedef enum {
 DBTYPE_MEASUREMENT=1,  
 DBTYPE_CHARACTERISTIC, 
 DBTYPE_ALL             
}TAsap3DBOType;
struct tAsap3Hdl;
typedef struct tAsap3Hdl *TAsap3Hdl;
typedef unsigned short TModulHdl;
typedef struct {
  int MainVersion;  
  int SubVersion;   
  int ServicePack;  
  char Application[30]; 
} Appversion;
extern unsigned short ASAP3_EXPORT CALL_CONV Asap3GetLastError(TAsap3Hdl hdl);
extern bool ASAP3_EXPORT CALL_CONV Asap3SetApplicationName(TAsap3Hdl hdl, const char *AppName);
extern bool ASAP3_EXPORT CALL_CONV Asap3GetApplicationName(TAsap3Hdl hdl,char *Name,unsigned long *Size);
extern bool ASAP3_EXPORT CALL_CONV Asap3GetApplicationVersion(TAsap3Hdl hdl,Appversion * version);
extern bool ASAP3_EXPORT CALL_CONV Asap3Exit2(TAsap3Hdl hdl,bool close_CANape);
extern bool ASAP3_EXPORT CALL_CONV Asap3ErrorText(TAsap3Hdl hdl, unsigned short errCode, char ** errMsg);
extern bool ASAP3_EXPORT CALL_CONV Asap3PopupDebugWindow(TAsap3Hdl hdl);
extern bool ASAP3_EXPORT CALL_CONV Asap3SaveDebugWindow(TAsap3Hdl hdl, const char *fileName);
extern bool ASAP3_EXPORT CALL_CONV Asap3AttachAsap2(TAsap3Hdl hdl,const char *asap2Fname, short canChnl, TModulHdl * module);
extern bool ASAP3_EXPORT CALL_CONV Asap3CreateModule(TAsap3Hdl hdl, const char *moduleName, const char *databaseFilename,
  short driverType, short channelNo, TModulHdl * module);
extern bool ASAP3_EXPORT CALL_CONV Asap3CreateModule2(TAsap3Hdl hdl, const char *moduleName, const char *databaseFilename,
  short driverType, short channelNo, bool goOnline, TModulHdl * module);
extern bool ASAP3_EXPORT CALL_CONV Asap3CreateModule3(TAsap3Hdl hdl,const char *moduleName, const char *databaseFilename,
  short driverType, short channelNo, bool goOnline, short enablecache, TModulHdl * module);
extern bool ASAP3_EXPORT CALL_CONV Asap3CreateModule4(TAsap3Hdl hdl, const char* moduleName, const char* databaseFname,
  short driverType, short channelNo, const char* interfaceName, bool goOnline, short enableCache, TModulHdl* module);
extern bool ASAP3_EXPORT CALL_CONV Asap3CreateModuleSec(TAsap3Hdl hdl, const char* moduleName, const char* databaseFname,
  short driverType, short channelNo, const char* interfaceName, unsigned int secProfileId, const char* securityRole,
  bool goOnline, short enableCache, TModulHdl* module);
extern bool ASAP3_EXPORT CALL_CONV Asap3GetModuleSecJobName(TAsap3Hdl hdl, TModulHdl module, char* jobName, DWORD* sizeofBuffer);
extern bool ASAP3_EXPORT CALL_CONV Asap3GetModuleCount(TAsap3Hdl hdl,unsigned long *count);
extern bool ASAP3_EXPORT CALL_CONV Asap3RestartMeasurementOnError(TAsap3Hdl hdl,TModulHdl module,bool restart);
extern bool ASAP3_EXPORT CALL_CONV Asap3IsRestartMeasurementOnErrorEnabled(TAsap3Hdl hdl,TModulHdl module,bool *restart);
extern bool ASAP3_EXPORT CALL_CONV Asap3IsModuleActive(TAsap3Hdl hdl,TModulHdl module,bool *activate);
extern bool ASAP3_EXPORT CALL_CONV Asap3ModuleActivation(TAsap3Hdl hdl,TModulHdl module,bool activate);
extern bool ASAP3_EXPORT CALL_CONV Asap3SwitchToMemoryPage(TAsap3Hdl hdl,TModulHdl module,enum e_RamMode mode);
extern bool ASAP3_EXPORT CALL_CONV Asap3GetMemoryPage(TAsap3Hdl hdl,TModulHdl module,enum e_RamMode *mode);
extern bool ASAP3_EXPORT CALL_CONV Asap3GetDBObjectUnit(TAsap3Hdl hdl,TModulHdl module,char *DatabaseObjectName,char *UnitName,UINT *Size);
extern bool ASAP3_EXPORT CALL_CONV Asap3GetDBObjectInfo(TAsap3Hdl hdl,TModulHdl module,char *ObjectName,DBObjectInfo *Info);
extern bool ASAP3_EXPORT CALL_CONV Asap3GetDatabaseObjects(TAsap3Hdl hdl,TModulHdl module,char *DataObjects,UINT *MaxSize,TAsap3DBOType DbType);
extern bool ASAP3_EXPORT CALL_CONV Asap3GetDatabaseObjectsByType(TAsap3Hdl hdl,TModulHdl module,char *DataObjects,UINT *MaxSize,TAsap3DBOType DbType,unsigned long TypeFilter);
extern bool ASAP3_EXPORT CALL_CONV Asap3GetAsap2(TAsap3Hdl hdl, TModulHdl module, char ** asap2Fname);
extern bool ASAP3_EXPORT CALL_CONV Asap3GetDatabaseInfo(TAsap3Hdl hdl, TModulHdl module, struct DBFileInfo *Info) ;
extern bool ASAP3_EXPORT CALL_CONV Asap3TransmitFile2ClientPc(TAsap3Hdl hdl, char *srcFname, char *dstFname);
extern bool ASAP3_EXPORT CALL_CONV Asap3GetModuleName(TAsap3Hdl hdl, TModulHdl module, char **moduleName);
extern bool ASAP3_EXPORT CALL_CONV Asap3GetModuleHandle(TAsap3Hdl hdl, const char *moduleName, TModulHdl * module);
extern bool ASAP3_EXPORT CALL_CONV Asap3ReleaseModule(TAsap3Hdl hdl, TModulHdl module);