ctypes_canapedll/CANapAPI.py


# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 742
if _libs["CANapAPI64.dll"].has("Asap3GetLastError", "stdcall"):
    Asap3GetLastError = _libs["CANapAPI64.dll"].get("Asap3GetLastError", "stdcall")
    Asap3GetLastError.argtypes = [TAsap3Hdl]
    Asap3GetLastError.restype = c_ushort

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 743
if _libs["CANapAPI64.dll"].has("Asap3SetApplicationName", "stdcall"):
    Asap3SetApplicationName = _libs["CANapAPI64.dll"].get("Asap3SetApplicationName", "stdcall")
    Asap3SetApplicationName.argtypes = [TAsap3Hdl, String]
    Asap3SetApplicationName.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 744
if _libs["CANapAPI64.dll"].has("Asap3GetApplicationName", "stdcall"):
    Asap3GetApplicationName = _libs["CANapAPI64.dll"].get("Asap3GetApplicationName", "stdcall")
    Asap3GetApplicationName.argtypes = [TAsap3Hdl, String, POINTER(c_ulong)]
    Asap3GetApplicationName.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 745
if _libs["CANapAPI64.dll"].has("Asap3GetApplicationVersion", "stdcall"):
    Asap3GetApplicationVersion = _libs["CANapAPI64.dll"].get("Asap3GetApplicationVersion", "stdcall")
    Asap3GetApplicationVersion.argtypes = [TAsap3Hdl, POINTER(Appversion)]
    Asap3GetApplicationVersion.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 746
if _libs["CANapAPI64.dll"].has("Asap3Exit2", "stdcall"):
    Asap3Exit2 = _libs["CANapAPI64.dll"].get("Asap3Exit2", "stdcall")
    Asap3Exit2.argtypes = [TAsap3Hdl, c_bool]
    Asap3Exit2.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 747
if _libs["CANapAPI64.dll"].has("Asap3ErrorText", "stdcall"):
    Asap3ErrorText = _libs["CANapAPI64.dll"].get("Asap3ErrorText", "stdcall")
    Asap3ErrorText.argtypes = [TAsap3Hdl, c_ushort, POINTER(POINTER(c_char))]
    Asap3ErrorText.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 748
if _libs["CANapAPI64.dll"].has("Asap3PopupDebugWindow", "stdcall"):
    Asap3PopupDebugWindow = _libs["CANapAPI64.dll"].get("Asap3PopupDebugWindow", "stdcall")
    Asap3PopupDebugWindow.argtypes = [TAsap3Hdl]
    Asap3PopupDebugWindow.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 749
if _libs["CANapAPI64.dll"].has("Asap3SaveDebugWindow", "stdcall"):
    Asap3SaveDebugWindow = _libs["CANapAPI64.dll"].get("Asap3SaveDebugWindow", "stdcall")
    Asap3SaveDebugWindow.argtypes = [TAsap3Hdl, String]
    Asap3SaveDebugWindow.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 750
if _libs["CANapAPI64.dll"].has("Asap3AttachAsap2", "stdcall"):
    Asap3AttachAsap2 = _libs["CANapAPI64.dll"].get("Asap3AttachAsap2", "stdcall")
    Asap3AttachAsap2.argtypes = [TAsap3Hdl, String, c_short, POINTER(TModulHdl)]
    Asap3AttachAsap2.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 751
if _libs["CANapAPI64.dll"].has("Asap3CreateModule", "stdcall"):
    Asap3CreateModule = _libs["CANapAPI64.dll"].get("Asap3CreateModule", "stdcall")
    Asap3CreateModule.argtypes = [TAsap3Hdl, String, String, c_short, c_short, POINTER(TModulHdl)]
    Asap3CreateModule.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 753
if _libs["CANapAPI64.dll"].has("Asap3CreateModule2", "stdcall"):
    Asap3CreateModule2 = _libs["CANapAPI64.dll"].get("Asap3CreateModule2", "stdcall")
    Asap3CreateModule2.argtypes = [TAsap3Hdl, String, String, c_short, c_short, c_bool, POINTER(TModulHdl)]
    Asap3CreateModule2.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 755
if _libs["CANapAPI64.dll"].has("Asap3CreateModule3", "stdcall"):
    Asap3CreateModule3 = _libs["CANapAPI64.dll"].get("Asap3CreateModule3", "stdcall")
    Asap3CreateModule3.argtypes = [TAsap3Hdl, String, String, c_short, c_short, c_bool, c_short, POINTER(TModulHdl)]
    Asap3CreateModule3.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 757
if _libs["CANapAPI64.dll"].has("Asap3CreateModule4", "stdcall"):
    Asap3CreateModule4 = _libs["CANapAPI64.dll"].get("Asap3CreateModule4", "stdcall")
    Asap3CreateModule4.argtypes = [TAsap3Hdl, String, String, c_short, c_short, String, c_bool, c_short, POINTER(TModulHdl)]
    Asap3CreateModule4.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 759
if _libs["CANapAPI64.dll"].has("Asap3CreateModuleSec", "stdcall"):
    Asap3CreateModuleSec = _libs["CANapAPI64.dll"].get("Asap3CreateModuleSec", "stdcall")
    Asap3CreateModuleSec.argtypes = [TAsap3Hdl, String, String, c_short, c_short, String, c_uint, String, c_bool, c_short, POINTER(TModulHdl)]
    Asap3CreateModuleSec.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 762
if _libs["CANapAPI64.dll"].has("Asap3GetModuleSecJobName", "stdcall"):
    Asap3GetModuleSecJobName = _libs["CANapAPI64.dll"].get("Asap3GetModuleSecJobName", "stdcall")
    Asap3GetModuleSecJobName.argtypes = [TAsap3Hdl, TModulHdl, String, POINTER(DWORD)]
    Asap3GetModuleSecJobName.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 763
if _libs["CANapAPI64.dll"].has("Asap3GetModuleCount", "stdcall"):
    Asap3GetModuleCount = _libs["CANapAPI64.dll"].get("Asap3GetModuleCount", "stdcall")
    Asap3GetModuleCount.argtypes = [TAsap3Hdl, POINTER(c_ulong)]
    Asap3GetModuleCount.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 764
if _libs["CANapAPI64.dll"].has("Asap3RestartMeasurementOnError", "stdcall"):
    Asap3RestartMeasurementOnError = _libs["CANapAPI64.dll"].get("Asap3RestartMeasurementOnError", "stdcall")
    Asap3RestartMeasurementOnError.argtypes = [TAsap3Hdl, TModulHdl, c_bool]
    Asap3RestartMeasurementOnError.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 765
if _libs["CANapAPI64.dll"].has("Asap3IsRestartMeasurementOnErrorEnabled", "stdcall"):
    Asap3IsRestartMeasurementOnErrorEnabled = _libs["CANapAPI64.dll"].get("Asap3IsRestartMeasurementOnErrorEnabled", "stdcall")
    Asap3IsRestartMeasurementOnErrorEnabled.argtypes = [TAsap3Hdl, TModulHdl, POINTER(c_bool)]
    Asap3IsRestartMeasurementOnErrorEnabled.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 766
if _libs["CANapAPI64.dll"].has("Asap3IsModuleActive", "stdcall"):
    Asap3IsModuleActive = _libs["CANapAPI64.dll"].get("Asap3IsModuleActive", "stdcall")
    Asap3IsModuleActive.argtypes = [TAsap3Hdl, TModulHdl, POINTER(c_bool)]
    Asap3IsModuleActive.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 767
if _libs["CANapAPI64.dll"].has("Asap3ModuleActivation", "stdcall"):
    Asap3ModuleActivation = _libs["CANapAPI64.dll"].get("Asap3ModuleActivation", "stdcall")
    Asap3ModuleActivation.argtypes = [TAsap3Hdl, TModulHdl, c_bool]
    Asap3ModuleActivation.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 768
if _libs["CANapAPI64.dll"].has("Asap3SwitchToMemoryPage", "stdcall"):
    Asap3SwitchToMemoryPage = _libs["CANapAPI64.dll"].get("Asap3SwitchToMemoryPage", "stdcall")
    Asap3SwitchToMemoryPage.argtypes = [TAsap3Hdl, TModulHdl, enum_e_RamMode]
    Asap3SwitchToMemoryPage.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 769
if _libs["CANapAPI64.dll"].has("Asap3GetMemoryPage", "stdcall"):
    Asap3GetMemoryPage = _libs["CANapAPI64.dll"].get("Asap3GetMemoryPage", "stdcall")
    Asap3GetMemoryPage.argtypes = [TAsap3Hdl, TModulHdl, POINTER(enum_e_RamMode)]
    Asap3GetMemoryPage.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 770
if _libs["CANapAPI64.dll"].has("Asap3GetDBObjectUnit", "stdcall"):
    Asap3GetDBObjectUnit = _libs["CANapAPI64.dll"].get("Asap3GetDBObjectUnit", "stdcall")
    Asap3GetDBObjectUnit.argtypes = [TAsap3Hdl, TModulHdl, String, String, POINTER(UINT)]
    Asap3GetDBObjectUnit.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 771
if _libs["CANapAPI64.dll"].has("Asap3GetDBObjectInfo", "stdcall"):
    Asap3GetDBObjectInfo = _libs["CANapAPI64.dll"].get("Asap3GetDBObjectInfo", "stdcall")
    Asap3GetDBObjectInfo.argtypes = [TAsap3Hdl, TModulHdl, String, POINTER(DBObjectInfo)]
    Asap3GetDBObjectInfo.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 772
if _libs["CANapAPI64.dll"].has("Asap3GetDatabaseObjects", "stdcall"):
    Asap3GetDatabaseObjects = _libs["CANapAPI64.dll"].get("Asap3GetDatabaseObjects", "stdcall")
    Asap3GetDatabaseObjects.argtypes = [TAsap3Hdl, TModulHdl, String, POINTER(UINT), TAsap3DBOType]
    Asap3GetDatabaseObjects.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 773
if _libs["CANapAPI64.dll"].has("Asap3GetDatabaseObjectsByType", "stdcall"):
    Asap3GetDatabaseObjectsByType = _libs["CANapAPI64.dll"].get("Asap3GetDatabaseObjectsByType", "stdcall")
    Asap3GetDatabaseObjectsByType.argtypes = [TAsap3Hdl, TModulHdl, String, POINTER(UINT), TAsap3DBOType, c_ulong]
    Asap3GetDatabaseObjectsByType.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 774
if _libs["CANapAPI64.dll"].has("Asap3GetAsap2", "stdcall"):
    Asap3GetAsap2 = _libs["CANapAPI64.dll"].get("Asap3GetAsap2", "stdcall")
    Asap3GetAsap2.argtypes = [TAsap3Hdl, TModulHdl, POINTER(POINTER(c_char))]
    Asap3GetAsap2.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 775
if _libs["CANapAPI64.dll"].has("Asap3GetDatabaseInfo", "stdcall"):
    Asap3GetDatabaseInfo = _libs["CANapAPI64.dll"].get("Asap3GetDatabaseInfo", "stdcall")
    Asap3GetDatabaseInfo.argtypes = [TAsap3Hdl, TModulHdl, POINTER(struct_DBFileInfo)]
    Asap3GetDatabaseInfo.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 776
if _libs["CANapAPI64.dll"].has("Asap3TransmitFile2ClientPc", "stdcall"):
    Asap3TransmitFile2ClientPc = _libs["CANapAPI64.dll"].get("Asap3TransmitFile2ClientPc", "stdcall")
    Asap3TransmitFile2ClientPc.argtypes = [TAsap3Hdl, String, String]
    Asap3TransmitFile2ClientPc.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 777
if _libs["CANapAPI64.dll"].has("Asap3GetModuleName", "stdcall"):
    Asap3GetModuleName = _libs["CANapAPI64.dll"].get("Asap3GetModuleName", "stdcall")
    Asap3GetModuleName.argtypes = [TAsap3Hdl, TModulHdl, POINTER(POINTER(c_char))]
    Asap3GetModuleName.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 778
if _libs["CANapAPI64.dll"].has("Asap3GetModuleHandle", "stdcall"):
    Asap3GetModuleHandle = _libs["CANapAPI64.dll"].get("Asap3GetModuleHandle", "stdcall")
    Asap3GetModuleHandle.argtypes = [TAsap3Hdl, String, POINTER(TModulHdl)]
    Asap3GetModuleHandle.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 779
if _libs["CANapAPI64.dll"].has("Asap3ReleaseModule", "stdcall"):
    Asap3ReleaseModule = _libs["CANapAPI64.dll"].get("Asap3ReleaseModule", "stdcall")
    Asap3ReleaseModule.argtypes = [TAsap3Hdl, TModulHdl]
    Asap3ReleaseModule.restype = c_bool
